@@ -17,8 +17,7 @@ import java.util.List;
 import java.util.Set;
 import java.util.stream.Stream;
 
-import static magma.compile.Lang.CRoot;
-import static magma.compile.Lang.JRoot;
+import static magma.compile.Lang.*;
 
 public class Compiler {
 	public static Result<String, CompileError> compile(String input) {
@@ -30,27 +29,27 @@ public class Compiler {
 	}
 
 	public static Result<CRoot, CompileError> transform(JRoot node) {
-		final List<Lang.JavaRootSegment> children = node.children();
-		final Stream<Lang.JavaRootSegment> stream = children.stream();
-		final Stream<List<Lang.CRootSegment>> listStream = stream.map(Compiler::flattenRootSegment);
-		final Stream<Lang.CRootSegment> cRootSegmentStream = listStream.flatMap(Collection::stream);
-		final List<Lang.CRootSegment> newChildren = cRootSegmentStream.toList();
+		final List<JavaRootSegment> children = node.children();
+		final Stream<JavaRootSegment> stream = children.stream();
+		final Stream<List<CRootSegment>> listStream = stream.map(Compiler::flattenRootSegment);
+		final Stream<CRootSegment> cRootSegmentStream = listStream.flatMap(Collection::stream);
+		final List<CRootSegment> newChildren = cRootSegmentStream.toList();
 		return new Ok<>(new CRoot(newChildren));
 	}
 
-	private static List<Lang.CRootSegment> flattenRootSegment(Lang.JavaRootSegment segment) {
+	private static List<CRootSegment> flattenRootSegment(JavaRootSegment segment) {
 		return switch (segment) {
-			case Lang.JStructure jStructure -> flattenStructure(jStructure);
-			case Lang.Invalid invalid -> List.of(invalid);
+			case JStructure jStructure -> flattenStructure(jStructure);
+			case Invalid invalid -> List.of(invalid);
 			default -> Collections.emptyList();
 		};
 	}
 
-	private static List<Lang.CRootSegment> flattenStructure(Lang.JStructure aClass) {
-		final List<Lang.JStructureSegment> children = aClass.children();
+	private static List<CRootSegment> flattenStructure(JStructure aClass) {
+		final List<JStructureSegment> children = aClass.children();
 
-		final ArrayList<Lang.CRootSegment> segments = new ArrayList<>();
-		final ArrayList<Lang.CDefinition> fields = new ArrayList<>();
+		final ArrayList<CRootSegment> segments = new ArrayList<>();
+		final ArrayList<CDefinition> fields = new ArrayList<>();
 
 		// Special handling for Record params - add them as struct fields
 		addRecordParamsAsFields(aClass, fields);
@@ -58,66 +57,66 @@ public class Compiler {
 		final String name = aClass.name();
 		children.stream().map(child -> flattenStructureSegment(child, name)).forEach(tuple -> {
 			segments.addAll(tuple.left());
-			if (tuple.right() instanceof Some<Lang.CDefinition>(Lang.CDefinition value)) fields.add(value);
+			if (tuple.right() instanceof Some<CDefinition>(CDefinition value)) fields.add(value);
 		});
 
-		final Lang.Structure structure =
-				new Lang.Structure(name, fields, new Some<>(System.lineSeparator()), aClass.typeParameters());
-		final List<Lang.CRootSegment> copy = new ArrayList<>();
+		final Structure structure =
+				new Structure(name, fields, new Some<>(System.lineSeparator()), aClass.typeParameters());
+		final List<CRootSegment> copy = new ArrayList<>();
 		copy.add(structure);
 		copy.addAll(segments);
 		return copy;
 	}
 
-	private static void addRecordParamsAsFields(Lang.JStructure aClass, ArrayList<Lang.CDefinition> fields) {
-		if (aClass instanceof Lang.Record record) {
-			Option<List<Lang.JDefinition>> params = record.params();
-			if (params instanceof Some<List<Lang.JDefinition>>(List<Lang.JDefinition> paramList))
+	private static void addRecordParamsAsFields(JStructure aClass, ArrayList<CDefinition> fields) {
+		if (aClass instanceof RecordNode record) {
+			Option<List<JDefinition>> params = record.params();
+			if (params instanceof Some<List<JDefinition>>(List<JDefinition> paramList))
 				paramList.stream().map(Compiler::transformDefinition).forEach(fields::add);
 		}
 	}
 
-	private static Tuple<List<Lang.CRootSegment>, Option<Lang.CDefinition>> flattenStructureSegment(Lang.JStructureSegment self,
-																																																	String name) {
+	private static Tuple<List<CRootSegment>, Option<CDefinition>> flattenStructureSegment(JStructureSegment self,
+																																												String name) {
 		return switch (self) {
-			case Lang.Invalid invalid -> new Tuple<>(List.of(invalid), new None<>());
-			case Lang.Method method -> new Tuple<>(List.of(transformMethod(method, name)), new None<>());
-			case Lang.JStructure jClass -> new Tuple<>(flattenStructure(jClass), new None<>());
-			case Lang.Field field -> new Tuple<>(Collections.emptyList(), new Some<>(transformDefinition(field.value())));
-			case Lang.Whitespace _, Lang.LineComment _, Lang.BlockComment _ ->
+			case Invalid invalid -> new Tuple<>(List.of(invalid), new None<>());
+			case Method method -> new Tuple<>(List.of(transformMethod(method, name)), new None<>());
+			case JStructure jClass -> new Tuple<>(flattenStructure(jClass), new None<>());
+			case Field field -> new Tuple<>(Collections.emptyList(), new Some<>(transformDefinition(field.value())));
+			case Whitespace _, LineComment _, BlockComment _ ->
 					new Tuple<>(Collections.emptyList(), new None<>());
-			case Lang.JInitialization jInitialization ->
+			case JInitialization jInitialization ->
 					new Tuple<>(Collections.emptyList(), new Some<>(transformDefinition(jInitialization.definition())));
-			case Lang.JDefinition jDefinition ->
+			case JDefinition jDefinition ->
 					new Tuple<>(Collections.emptyList(), new Some<>(transformDefinition(jDefinition)));
 		};
 	}
 
-	private static Lang.Function transformMethod(Lang.Method method, String structName) {
-		final List<Lang.JDefinition> oldParams = switch (method.params()) {
-			case None<List<Lang.JDefinition>> _ -> Collections.emptyList();
-			case Some<List<Lang.JDefinition>> v -> v.value();
+	private static Function transformMethod(Method method, String structName) {
+		final List<JDefinition> oldParams = switch (method.params()) {
+			case None<List<JDefinition>> _ -> Collections.emptyList();
+			case Some<List<JDefinition>> v -> v.value();
 		};
 
-		final List<Lang.CParameter> newParams = oldParams.stream().map(Compiler::transformParameter).toList();
+		final List<CParameter> newParams = oldParams.stream().map(Compiler::transformParameter).toList();
 
-		final Lang.CDefinition cDefinition = transformDefinition(method.definition());
+		final CDefinition cDefinition = transformDefinition(method.definition());
 
 		// Extract type parameters from method signature
-		final Option<List<Lang.Identifier>> extractedTypeParams = extractMethodTypeParameters(method);
+		final Option<List<Identifier>> extractedTypeParams = extractMethodTypeParameters(method);
 
 		// Convert method body from Option<List<JFunctionSegment>> to
 		// List<CFunctionSegment>
 		// JFunctionSegment and CFunctionSegment share the same implementations
 		// (Placeholder, Whitespace, Invalid)
-		final List<Lang.CFunctionSegment> bodySegments = switch (method.body()) {
-			case None<List<Lang.JMethodSegment>> _ -> Collections.emptyList();
-			case Some<List<Lang.JMethodSegment>>(List<Lang.JMethodSegment> segments) -> {
+		final List<CFunctionSegment> bodySegments = switch (method.body()) {
+			case None<List<JMethodSegment>> _ -> Collections.emptyList();
+			case Some<List<JMethodSegment>>(List<JMethodSegment> segments) -> {
 				yield segments.stream().map(Compiler::transformFunctionSegment).toList();
 			}
 		};
 
-		return new Lang.Function(new Lang.CDefinition(cDefinition.name() + "_" + structName,
+		return new Function(new CDefinition(cDefinition.name() + "_" + structName,
 																									cDefinition.type(),
 																									cDefinition.typeParameters()),
 														 newParams,
@@ -126,99 +125,99 @@ public class Compiler {
 														 extractedTypeParams);
 	}
 
-	static Lang.CFunctionSegment transformFunctionSegment(Lang.JMethodSegment segment) {
+	static CFunctionSegment transformFunctionSegment(JMethodSegment segment) {
 		return switch (segment) {
-			case Lang.JIf anIf -> transformIf(anIf);
-			case Lang.Invalid invalid -> invalid;
-			case Lang.Placeholder placeholder -> placeholder;
-			case Lang.Whitespace whitespace -> whitespace;
-			case Lang.JReturn aReturn -> new Lang.CReturn(transformExpression(aReturn.value()));
-			case Lang.LineComment lineComment -> lineComment;
-			case Lang.JBlock jBlock -> transformBlock(jBlock);
-			case Lang.JInitialization jInitialization -> transformInitialization(jInitialization);
-			case Lang.JAssignment jAssignment -> transformAssignment(jAssignment);
-			case Lang.JPostFix jPostFix -> new Lang.CPostFix(transformExpression(jPostFix.value()));
-			case Lang.JElse jElse -> new Lang.CElse(transformFunctionSegment(jElse.child()));
-			case Lang.Break aBreak -> aBreak;
-			case Lang.JWhile jWhile -> transformWhile(jWhile);
-			case Lang.JInvocation invocation -> transformInvocation(invocation);
-			case Lang.JConstruction jConstruction -> handleConstruction(jConstruction);
-			case Lang.JDefinition jDefinition -> transformDefinition(jDefinition);
-			case Lang.Catch aCatch -> new Lang.Invalid("???");
-			case Lang.Try aTry -> new Lang.Invalid("???");
-			case Lang.SwitchStatement switchStatement -> new Lang.Invalid("???");
-			case Lang.Yield yield -> new Lang.Invalid("???");
+			case JIf anIf -> transformIf(anIf);
+			case Invalid invalid -> invalid;
+			case Placeholder placeholder -> placeholder;
+			case Whitespace whitespace -> whitespace;
+			case JReturn aReturn -> new CReturn(transformExpression(aReturn.value()));
+			case LineComment lineComment -> lineComment;
+			case JBlock jBlock -> transformBlock(jBlock);
+			case JInitialization jInitialization -> transformInitialization(jInitialization);
+			case JAssignment jAssignment -> transformAssignment(jAssignment);
+			case JPostFix jPostFix -> new CPostFix(transformExpression(jPostFix.value()));
+			case JElse jElse -> new CElse(transformFunctionSegment(jElse.child()));
+			case Break aBreak -> aBreak;
+			case JWhile jWhile -> transformWhile(jWhile);
+			case JInvocation invocation -> transformInvocation(invocation);
+			case JConstruction jConstruction -> handleConstruction(jConstruction);
+			case JDefinition jDefinition -> transformDefinition(jDefinition);
+			case Catch aCatch -> new Invalid("???");
+			case Try aTry -> new Invalid("???");
+			case SwitchStatement switchStatement -> new Invalid("???");
+			case Yield yield -> new Invalid("???");
 		};
 	}
 
-	private static Lang.CWhile transformWhile(Lang.JWhile jWhile) {
-		return new Lang.CWhile(transformExpression(jWhile.condition()), transformFunctionSegment(jWhile.body()));
+	private static CWhile transformWhile(JWhile jWhile) {
+		return new CWhile(transformExpression(jWhile.condition()), transformFunctionSegment(jWhile.body()));
 	}
 
-	private static Lang.CAssignment transformAssignment(Lang.JAssignment jAssignment) {
-		return new Lang.CAssignment(transformExpression(jAssignment.location()), transformExpression(jAssignment.value()));
+	private static CAssignment transformAssignment(JAssignment jAssignment) {
+		return new CAssignment(transformExpression(jAssignment.location()), transformExpression(jAssignment.value()));
 	}
 
-	private static Lang.CInitialization transformInitialization(Lang.JInitialization jInitialization) {
-		return new Lang.CInitialization(transformDefinition(jInitialization.definition()),
+	private static CInitialization transformInitialization(JInitialization jInitialization) {
+		return new CInitialization(transformDefinition(jInitialization.definition()),
 																		transformExpression(jInitialization.value()));
 	}
 
-	private static Lang.CBlock transformBlock(Lang.JBlock jBlock) {
-		return new Lang.CBlock(jBlock.children().stream().map(Compiler::transformFunctionSegment).toList());
+	private static CBlock transformBlock(JBlock jBlock) {
+		return new CBlock(jBlock.children().stream().map(Compiler::transformFunctionSegment).toList());
 	}
 
-	private static Lang.CIf transformIf(Lang.JIf anIf) {
-		return new Lang.CIf(transformExpression(anIf.condition()), transformFunctionSegment(anIf.body()));
+	private static CIf transformIf(JIf anIf) {
+		return new CIf(transformExpression(anIf.condition()), transformFunctionSegment(anIf.body()));
 	}
 
-	private static Lang.CInvocation handleConstruction(Lang.JConstruction jConstruction) {
+	private static CInvocation handleConstruction(JConstruction jConstruction) {
 		String name = "new_" + transformType(jConstruction.type()).stringify();
-		final List<Lang.CExpression> list = jConstruction.arguments()
-																										 .orElse(new ArrayList<Lang.JExpression>())
-																										 .stream()
-																										 .map(Compiler::transformExpression)
-																										 .toList();
-		return new Lang.CInvocation(new Lang.Identifier(name), list);
+		final List<CExpression> list = jConstruction.arguments()
+																								.orElse(new ArrayList<JExpression>())
+																								.stream()
+																								.map(Compiler::transformExpression)
+																								.toList();
+		return new CInvocation(new Identifier(name), list);
 	}
 
-	static Lang.CExpression transformExpression(Lang.JExpression expression) {
+	static CExpression transformExpression(JExpression expression) {
 		return switch (expression) {
-			case Lang.Invalid invalid -> invalid;
-			case Lang.Identifier identifier -> identifier;
-			case Lang.JFieldAccess fieldAccess ->
-					new Lang.CFieldAccess(transformExpression(fieldAccess.child()), fieldAccess.name());
-			case Lang.JInvocation jInvocation -> transformInvocation(jInvocation);
-			case Lang.JConstruction jConstruction -> handleConstruction(jConstruction);
-			case Lang.JAdd add -> new Lang.CAdd(transformExpression(add.left()), transformExpression(add.right()));
-			case Lang.JString jString -> new Lang.CString(jString.content().orElse(""));
-			case Lang.JEquals jEquals ->
-					new Lang.CEquals(transformExpression(jEquals.left()), transformExpression(jEquals.right()));
-			case Lang.And and -> new Lang.CAnd(transformExpression(and.left()), transformExpression(and.right()));
-			case Lang.CharNode charNode -> charNode;
-			default -> new Lang.Invalid("???");
+			case Invalid invalid -> invalid;
+			case Identifier identifier -> identifier;
+			case JFieldAccess fieldAccess ->
+					new CFieldAccess(transformExpression(fieldAccess.child()), fieldAccess.name());
+			case JInvocation jInvocation -> transformInvocation(jInvocation);
+			case JConstruction jConstruction -> handleConstruction(jConstruction);
+			case JAdd add -> new CAdd(transformExpression(add.left()), transformExpression(add.right()));
+			case JString jString -> new CString(jString.content().orElse(""));
+			case JEquals jEquals ->
+					new CEquals(transformExpression(jEquals.left()), transformExpression(jEquals.right()));
+			case And and -> new CAnd(transformExpression(and.left()), transformExpression(and.right()));
+			case CharNode charNode -> charNode;
+			default -> new Invalid("???");
 		};
 	}
 
-	private static Lang.CInvocation transformInvocation(Lang.JInvocation jInvocation) {
-		final List<Lang.CExpression> newArguments =
+	private static CInvocation transformInvocation(JInvocation jInvocation) {
+		final List<CExpression> newArguments =
 				jInvocation.arguments().orElse(new ArrayList<>()).stream().map(Compiler::transformExpression).toList();
-		return new Lang.CInvocation(transformExpression(jInvocation.caller()), newArguments);
+		return new CInvocation(transformExpression(jInvocation.caller()), newArguments);
 	}
 
-	private static Lang.CParameter transformParameter(Lang.JDefinition param) {
-		final Lang.CType transformedType = transformType(param.type());
+	private static CParameter transformParameter(JDefinition param) {
+		final CType transformedType = transformType(param.type());
 
 		// If the transformed type is a FunctionPointer, create
 		// CFunctionPointerDefinition
-		if (transformedType instanceof Lang.FunctionPointer(Lang.CType returnType, List<Lang.CType> paramTypes))
-			return new Lang.CFunctionPointerDefinition(param.name(), returnType, paramTypes);
+		if (transformedType instanceof FunctionPointer(CType returnType, List<CType> paramTypes))
+			return new CFunctionPointerDefinition(param.name(), returnType, paramTypes);
 
 		// Otherwise create regular CDefinition
-		return new Lang.CDefinition(param.name(), transformedType, new None<>());
+		return new CDefinition(param.name(), transformedType, new None<>());
 	}
 
-	private static Option<List<Lang.Identifier>> extractMethodTypeParameters(Lang.Method method) {
+	private static Option<List<Identifier>> extractMethodTypeParameters(Method method) {
 		// Analyze method signature to detect generic type parameters
 		final Set<String> typeVars = new HashSet<>();
 
@@ -226,67 +225,67 @@ public class Compiler {
 		collectTypeVariables(method.definition().type(), typeVars);
 
 		// Check parameter types for type variables
-		if (method.params() instanceof Some<List<Lang.JDefinition>>(List<Lang.JDefinition> paramList))
+		if (method.params() instanceof Some<List<JDefinition>>(List<JDefinition> paramList))
 			paramList.forEach(param -> collectTypeVariables(param.type(), typeVars));
 
 		if (typeVars.isEmpty()) return new None<>();
 
 		// Convert to Identifier objects
-		final List<Lang.Identifier> identifiers = typeVars.stream().map(Lang.Identifier::new).toList();
+		final List<Identifier> identifiers = typeVars.stream().map(Identifier::new).toList();
 
 		return new Some<>(identifiers);
 	}
 
-	private static void collectTypeVariables(Lang.JType type, Set<String> typeVars) {
+	private static void collectTypeVariables(JType type, Set<String> typeVars) {
 		switch (type) {
-			case Lang.Identifier ident -> {
+			case Identifier ident -> {
 				// Single letter identifiers are likely type variables (R, E, etc.)
 				if (ident.value().length() == 1 && Character.isUpperCase(ident.value().charAt(0))) typeVars.add(ident.value());
 			}
-			case Lang.JGeneric generic -> {
+			case JGeneric generic -> {
 				// Check base type name for type variables
 				if (generic.base().length() == 1 && Character.isUpperCase(generic.base().charAt(0)))
 					typeVars.add(generic.base());
 				// Collect from type typeArguments
-				final List<Lang.JType> listOption = generic.typeArguments().orElse(new ArrayList<>());
+				final List<JType> listOption = generic.typeArguments().orElse(new ArrayList<>());
 				listOption.forEach(arg -> collectTypeVariables(arg, typeVars));
 			}
-			case Lang.Array array -> collectTypeVariables(array.child(), typeVars);
+			case Array array -> collectTypeVariables(array.child(), typeVars);
 			default -> {
 				/* Other types don't contain type variables */
 			}
 		}
 	}
 
-	private static Lang.CDefinition transformDefinition(Lang.JDefinition definition) {
+	private static CDefinition transformDefinition(JDefinition definition) {
 		// Default to no type parameters for backward compatibility
-		final Option<List<Lang.Identifier>> typeParams = definition.typeParameters();
-		return new Lang.CDefinition(definition.name(), transformType(definition.type()), typeParams);
+		final Option<List<Identifier>> typeParams = definition.typeParameters();
+		return new CDefinition(definition.name(), transformType(definition.type()), typeParams);
 	}
 
-	private static Lang.CType transformType(Lang.JType type) {
+	private static CType transformType(JType type) {
 		return switch (type) {
-			case Lang.Invalid invalid -> invalid;
-			case Lang.JGeneric generic -> {
+			case Invalid invalid -> invalid;
+			case JGeneric generic -> {
 				// Convert Function<T, R> to function pointer R (*)(T)
-				final List<Lang.JType> listOption = generic.typeArguments().orElse(new ArrayList<>());
+				final List<JType> listOption = generic.typeArguments().orElse(new ArrayList<>());
 				if (generic.base().equals("Function") && listOption.size() == 2) {
-					final Lang.CType paramType = transformType(listOption.get(0));
-					final Lang.CType returnType = transformType(listOption.get(1));
-					yield new Lang.FunctionPointer(returnType, List.of(paramType));
+					final CType paramType = transformType(listOption.get(0));
+					final CType returnType = transformType(listOption.get(1));
+					yield new FunctionPointer(returnType, List.of(paramType));
 				}
-				yield new Lang.CGeneric(generic.base(), listOption.stream().map(Compiler::transformType).toList());
+				yield new CGeneric(generic.base(), listOption.stream().map(Compiler::transformType).toList());
 			}
-			case Lang.Array array -> {
-				Lang.CType childType = transformType(array.child());
-				yield new Lang.Pointer(childType);
+			case Array array -> {
+				CType childType = transformType(array.child());
+				yield new Pointer(childType);
 			}
-			case Lang.Identifier identifier -> {
-				if (identifier.value().equals("String")) yield new Lang.Pointer(new Lang.Identifier("char"));
+			case Identifier identifier -> {
+				if (identifier.value().equals("String")) yield new Pointer(new Identifier("char"));
 				yield identifier;
 			}
-			case Lang.Wildcard wildcard -> new Lang.Invalid("???");
-			case Lang.Variadic variadic -> new Lang.Invalid("???");
+			case Wildcard wildcard -> new Invalid("???");
+			case Variadic variadic -> new Invalid("???");
 		};
 	}
 }
